--- a/projects/shared/package.json
+++ b/projects/shared/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "peerDependencies": {
     "@angular/common": "^12.1.0",
-    "@angular/core": "^12.1.0"
+    "@angular/core": "^12.1.0",
+    "@angular/material": "^12.1.4"
   },
   "dependencies": {
     "tslib": "^2.2.0"
